--- a/rsworld-sys/Cargo.toml
+++ b/rsworld-sys/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rsworld-sys"
 version = "0.1.0"
-authors = ["BiggieBoo18"]
+authors = ["BiggieBoo18", "Layetri <rosa@expressivelabs.net>"]
 edition = "2018"
 build   = "build.rs"
 
