--- a/rsworld/Cargo.toml
+++ b/rsworld/Cargo.toml
@@ -12,4 +12,4 @@ keywords = ["Rust-WORLD", "WORLD", "world", "vocoder"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rsworld-sys = "0.1.0"
+rsworld-sys = {version = "0.2.0", path = "../rsworld-sys"}
