--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 license = "MIT"
 description = "Rust-World is a WORLD(https://github.com/mmorise/World) wrapper for Rust. "
-repository = "https://github.com/BiggieBoo18/Rust-WORLD"
+repository = "https://github.com/layetri/Rust-WORLD"
 readme = "README.md"
 keywords = ["Rust-WORLD", "WORLD", "world", "vocoder"]
 
