--- a/rsworld-sys/Cargo.toml
+++ b/rsworld-sys/Cargo.toml
@@ -7,7 +7,7 @@ build   = "build.rs"
 
 license = "MIT"
 description = "Rust-World is a WORLD(https://github.com/mmorise/World) wrapper for Rust. "
-repository = "https://github.com/BiggieBoo18/Rust-WORLD"
+repository = "https://github.com/layetri/Rust-WORLD"
 readme = "README.md"
 keywords = ["Rust-WORLD", "WORLD", "world", "vocoder"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
